--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,5 @@ jobs:
       env:
         HF_TOKEN: ${{ secrets.HF_TOKEN }}
       run: |
-        git config --global user.email "you@example.com"
-        git config --global user.name "Your Name"
-        git remote add space https://huggingface.co/spaces/YOUR_USERNAME/YOUR_SPACE_NAME
-        git push https://YOUR_USERNAME:$HF_TOKEN@huggingface.co/spaces/YOUR_USERNAME/YOUR_SPACE_NAME main
+        git remote add space https://huggingface.co/spaces/cesarrf/demo2
+        git push https://cesarrf:$HF_TOKEN@huggingface.co/spaces/cesarrf/demo2 main
