--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Push to Hugging Face Space
       env:
-        HF_TOKEN: ${{ secrets.HF_TOKEN }}
+        HF_TOKEN: ${{ secrets.HG }}
       run: |
-        git remote add space https://cesarrf:$HF_TOKEN@huggingface.co/spaces/cesarrf/demo2
-        git push space main
+        git remote set-url origin https://cesarrf:HF_TOKEN@huggingface.co/cesarrf/demo2
+        git pull origin
