Add git fetch before pushing to Hugging Face Space

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,4 +27,6 @@ jobs:
       env:
         HF_TOKEN: ${{ secrets.HG }}
       run: |
+        git fetch --all
         git push --force https://cesarrf:$HF_TOKEN@huggingface.co/spaces/cesarrf/demo2 main
+        
