--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,7 @@
-name: Deploy to Hugging Face Space
-
+name: Sync to Hugging Face hub
 on:
   push:
-    branches:
-      - main  # or your default branch
+    branches: [main]
 
 jobs:
   deploy:
@@ -22,7 +20,10 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-
+    - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          lfs: true
     - name: Push to Hugging Face Space
       env:
         HF_TOKEN: ${{ secrets.HG }}
